better async exception handling